Commiting the work of this tutorial

--- a/index.html
+++ b/index.html
@@ -5,10 +5,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        a#a1 {
+            display: block;
+            height: auto;
+            width: auto;
+            background-color: green;
+            border: 5px solid black;
+            text-decoration: none;
+            color:black;
+            font-size: 32px;
+            font-weight: bold;
+            text-shadow: 7px 7px 3px black;
+        }
+        a#a2{
+            display: block;
+            height: auto;
+            width: auto;
+            background-color: black;
+            border: 5px solid green;
+            text-decoration: none;
+            color:green;
+            font-size: 32px;
+            font-weight: bold;
+            text-shadow: 7px 7px 3px green;
+        }
+    </style>
 </head>
 
 <body>
     <a href="https://www.google.com" id="a1">Go to GOOGLE website</a>
+    <a href="https://www.w3school.com" id="a2">Go to W3SCHOOL website</a>
+
 </body>
 
 </html>
